--- a/html/record.html
+++ b/html/record.html
@@ -13,6 +13,10 @@
         <title>Record</title>
         <link rel="stylesheet" type="text/css" href="css/edit-style.css">
         <link rel="stylesheet" type="text/css" href="css/record.css">
+        <link rel="stylesheet" type="text/css" href="libs/bootstrap-4.0.0-beta.3-dist/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="libs/bootstrap-4.0.0-beta.3-dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/record.js"></script>
     </head>
     <body>
